@@ -129,5 +129,6 @@ cdef extern from "etree_defs.h": # redefines some functions as macros
     cdef bint _isString(object obj)
     cdef const_char* _fqtypename(object t)
     cdef object PY_NEW(object t)
+    cdef bint LXML_UNICODE_STRINGS
     cdef bint IS_PYTHON3
     cdef bint IS_PYPY
